# Potentiostat-datapipeline

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_quality.yaml
examples/: example_detection.py  example_full_chain.py
examples/data/: proc.csv  raw.csv
src/potentiopipe/: __init__.py  cli.py  data_processing.py  signal_processing.py  types.py  visualization.py
tests/: test_cli.py  test_init.py  test_potentiopipe.py
